packages/swc-plugin-runners/tests/errors/misspelled-directive/input.js
export async function myRunner(ctx) {
  "use runer";
  return { name: "test", status: "pass" };
}

